--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,13 +1,16 @@
 .navbarSmItemStyle {
   background: #1f2937;
-  width: 200px;
+  width: 250px;
   position: absolute;
   right: 10px;
   top: 70px;
+  padding: 20px 12px;
+  z-index: 12;
 }
 
 .navbarSmItemStyle a {
   display: block;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
